<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".ItemProfile">

    <TextView
        android:id="@+id/ItemProfileTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Default"
        android:textColor="@color/toolbar"
        android:textSize="30sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/ItemProfileBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Default"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/ItemProfileColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Default"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/ItemProfileDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Default"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/ItemProfileOther"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Default"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/UserProfileStaticText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/toolbar"
        android:text="@string/post_select_user_static"
        android:textSize="30sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/UserProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Default"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/UserProfileEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Default"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/ItemProfileImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:cropToPadding="true"
        android:scaleType="fitCenter"
        android:src="@drawable/test_face"/>

    <Button
        android:id="@+id/PhoneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="10dp"
        android:text="123456789"/>


</LinearLayout>