<resources>
    <string name="app_name">CP470-Losty</string>
    <string name="account_creation_title">Account Creation</string>
    <string name="account_name">Name</string>
    <string name="account_email">Email</string>
    <string name="account_username">Username</string>
    <string name="account_password">Password</string>
    <string name="account_create_button">Create Account</string>
    <string name="account_phone_number">Phone Number</string>
    <string name="login_title">Login</string>
    <string name="login_button">Login</string>

    <string name="lost_post_title">Lost an item ? Post it here.</string>
    <string name="item_name">item name</string>
    <string name="item_brand">item brand</string>
    <string name="item_color">color</string>
    <string name="item_description">description</string>
    <string name="item_other">other</string>
    <string name="item_image">Select a photo of your lost item</string>
    <string name="post_button">Post Lost Item</string>
    <string name="select_picture">Select Picture</string>
    <string name="posting">Posting...</string>
    <string name="successfully_posted">"Successfully uploaded post"</string>
    <string name="error_posting">Error: inserting data - data not saved</string>
    <string name="error_form_not_valid">Please fill out all entries</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_select_user_static">Poster Details</string>
    <string name="name">Name: </string>
    <string name="email">Email: </string>
    <string name="item_profile_title">Item Details</string>
    <string name="sign_out">Sign out</string>

    <!-- Profile strings  -->
    <string name="profile_profile_picture_text">Profile Picture</string>
    <string name="profile_update_email_text">Update Email</string>
    <string name="profile_phone_number_text">Phone Number</string>
    <string name="profile_name_text">Name</string>
    <string name="profile_save_text">Save</string>


    <!-- Help Page strings  -->
    <string name="help_page_title">Help Page</string>
    <string name="how_to_post">How to post a lost item</string>
    <string name="how_to_view_feed">How to view lost items near you</string>
    <string name="how_to_sign_out">How to sign in/out</string>
    <string name="about">About</string>
    <string name="post_fragment">To make a post about an item that you have lost, tap on the post option at the bottom of the screen. Add a picture of the item, enter the name of the item, the brand of the item, the color of the item, and include a detailed description of the item. You can also include other information. Lastly, tap on  POST LOST ITEM </string>
    <string name="feed_fragment">To view what other users have lost, tap on the home option at the bottom of the screen. Here you will find items that other people have lost.</string>
    <string name="sign_fragment">To sign out, tap on the profile option at the bottom of the screen. At the bottom of the profile page you will see an option to sign out. Once signed out, you will be prompted to sign in.</string>


</resources>